fix: word-wrap

--- a/arbitrum_react/src/sass/style.scss
+++ b/arbitrum_react/src/sass/style.scss
@@ -182,7 +182,7 @@ p {
   &:disabled {
     opacity: .9;
     cursor: not-allowed;
-    background: none;
+    
   }
 }
 
@@ -255,7 +255,7 @@ p {
     // font-weight: 500;
     font-size: large;
     white-space: pre-wrap !important;
-    // word-break: break-all !important;
+    // 
   }
 
   a {
