--- a/fuel_react/src/sass/style.scss
+++ b/fuel_react/src/sass/style.scss
@@ -174,7 +174,7 @@
   &:disabled {
     opacity: .9;
     cursor: not-allowed;
-    background: none;
+    
   }
 }
 
@@ -243,7 +243,7 @@
   p {
     font-weight: 500;
     white-space: pre-wrap !important;
-    word-break: break-all !important;
+    
   }
 
   a {
