--- a/sui_react/src/sass/style.scss
+++ b/sui_react/src/sass/style.scss
@@ -164,7 +164,7 @@
   &:disabled {
     opacity: .9;
     cursor: not-allowed;
-    background: none;
+    
   }
 }
 
@@ -233,7 +233,7 @@
   p {
     font-weight: 500;
     white-space: pre-wrap !important;
-    word-break: break-all !important;
+    
   }
 
   a {
