--- a/zetachain_react/src/sass/style.scss
+++ b/zetachain_react/src/sass/style.scss
@@ -178,7 +178,6 @@ p {
   &:disabled {
     opacity: .9;
     cursor: not-allowed;
-    background: none;
   }
 }
 
@@ -250,7 +249,7 @@ p {
     // font-weight: 500;
     font-size: large;
     white-space: pre-wrap !important;
-    word-break: break-all !important;
+    
   }
 
   a {
