--- a/zksync_react/src/sass/style.scss
+++ b/zksync_react/src/sass/style.scss
@@ -173,7 +173,7 @@
   &:disabled {
     opacity: .9;
     cursor: not-allowed;
-    background: none;
+    
   }
 }
 
@@ -242,7 +242,6 @@
   p {
     font-weight: 500;
     white-space: pre-wrap !important;
-    word-break: break-all !important;
   }
 
   a {
